--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Привет всем</h1>
     </title>
     <button>Отправить</button>
+    <div>Программа для выбора пункта отправки</div>
 </body>
 </html>
