--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     </title>
     <button>Отправить</button>
     <div>Программа для выбора пункта отправки</div>
+    <h2>Выберите пункт доставки</h2>
 </body>
 </html>
