--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <button>Отправить</button>
     <div>Программа для выбора пункта отправки</div>
     <h2>Выберите пункт доставки</h2>
+    <button>Cancel</button>
 </body>
 </html>
