--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div>Программа для выбора пункта отправки</div>
     <h2>Выберите пункт доставки</h2>
     <button>Cancel</button>
+    <button>New button</button>
 </body>
 </html>
