--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="#services">Услуги</a>
+        </nav>
+    </header>
     <title>
         <h1>Привет всем</h1>
     </title>
     <button>Отправить</button>
     <div>Программа для выбора пункта отправки</div>
+    <div>Звоние нам по телефону: +79534842602</div>
 </body>
 </html>
