--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </nav>
     </header>
     <title>
-        <h1>Привет всем</h1>
+        <h1>Сайт находится в разработке</h1>
     </title>
     <button>Отправить</button>
     <div>Звоние нам по телефону: +79534842602</div>
