--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a href="#services">Услуги</a>
         </nav>
     </header>
+    <h1>Название сайта крупным планом</h1>
     <button>Отправить</button>
     <div>Звоние нам по телефону: +79534842602</div>
 </body>
