--- a/index.html
+++ b/index.html
@@ -4,22 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
-    <title>Document</title>
+    <title>11</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="#services">Услуги</a>
-        </nav>
-    </header>
-<<<<<<< HEAD
-    <title>
-    </title>
-    <button>Отправить</button>
-    <div>Звоние нам по телефону: +795348426023</div>
-=======
-    <h1>Название сайта крупным планом</h1>
-    <div>Звоние нам по телефону: +79534842632</div>
->>>>>>> delete-title
+   
 </body>
 </html>
