--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
-    <title>11</title>
+    <title>Официальный сайт</title>
 </head>
 <body>
-<<<<<<< HEAD
-   
-=======
     <header>
-        <nav>
-            <a href="#services">Услуги</a>
-        </nav>
     </header>
     <h1>Название сайта крупным планом</h1>
-    <div>Звоние нам по телефону: +79534842632</div>
->>>>>>> a878d536e095a1e36cbe0267b85c699bb3de78ba
+    <h2>Тестовая страница</h2>
 </body>
 </html>
