--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     </header>
     <h1>Название сайта крупным планом</h1>
     <h2>Тестовая страница</h2>
+    <p>Нужно не болтать, а делать</p>
+    <button>Отправить заявку</button>
 </body>
 </html>
