--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     </header>
-    <h1>Название сайта крупным планом</h1>
+    <h1>Название страницы крупным планом</h1>
     <h2>Тестовая страница</h2>
     <p>Нужно не болтать, а делать</p>
     <button>Отправить заявку</button>
