--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>Тестовая страница</h2>
     <p>Нужно не болтать, а делать</p>
     <button>Отправить заявку</button>
+    <img src="../new-project2-2/img/фото.png" alt="">
 </body>
 </html>
